// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation matches snapshot no selection 1`] = `
.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  data-analytics-region="region"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="confirm"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation renders with data-analytics-label and ref 1`] = `
.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="custom-label"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation works without optional props and drawFocus={true} 1`] = `
.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="confirm"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;
